# to-do-console-app

./: CMakeLists.txt  ConsoleMenu.cpp  ConsoleMenu.h  FileManager.cpp  FileManager.h  README.md  Task.cpp  Tasks.cpp  Tasks.h  main.cpp
include/: consoleMenu.h  fileManager.h  task.h  tasks.h  utils.h
src/: consoleMenu.cpp  fileManager.cpp  task.cpp  tasks.cpp  utils.cpp
